# sample-renewable-planning-agent

./: .cfnlintrc.yaml  .gitignore  README.md  makefile  pyproject.toml  samconfig.toml  template.yml
.ash/: .ash.yaml
.github/workflows/: ci.yaml
agents/: Dockerfile  layout_agent.py  logging_config.py  report_agent.py  requirements.txt  simulation_agent.py  terrain_agent.py  wind_farm_dev_agent.py
agents/prompts/: development_agent_prompt.py  layout_prompt.py  report_prompt.py  simulation_prompt.py  terrain_prompt.py
agents/tools/: knowledge_base_tools.py  layout_tools.py  mcp_utils.py  report_tools.py  shared_tools.py  simulation_tools.py  storage_utils.py  terrain_tools.py  wind_farm_dev_tools.py
mcp_tools/: Dockerfile  get_wind_conditions.py  requirements.txt  wind_tools_lambda.py
web_app/: Dockerfile  README.md  pyproject.toml
web_app/backend/: projects_db.py  requirements.txt  server.py
web_app/frontend/: index.html  package-lock.json  package.json  vite.config.ts
web_app/frontend/src/: App.tsx  index.css  liquidglass.css
web_app/frontend/src/common/components/Layout/: index.tsx
web_app/frontend/src/common/components/Layout/TopBar/: index.tsx
web_app/frontend/src/pages/Chat/: Map.tsx  index.tsx  polling-api.ts
