[project]
name = "wind-farm-assistant"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "boto3",
    "requests",
    "markdown",
    "typing",
    "fastapi",
    "uvicorn[standard]"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
